# test-tt-export

./: .gitignore  CLAUDE.md  README.md  build.py  config.toml  pyproject.toml
.github/workflows/: deploy.yml
content/: _index.md
content/passages/: _index.md
data/: about.md  audio.json  config.json  glossary.md  i18n.json  passages.json
data/passages/at-the-market/: intro.md
data/passages/morning-greeting/: intro.md
data/passages/the-elephant-story/: intro.md
sass/: style.scss
scripts/: generate_audio_manifest.py  generate_passages.py
static/js/: app.js
templates/: about.html  base.html  glossary.html  macros.html  passage.html  passages.html  search.html
